Fix height of app on mobile
100vh does not equal to the visible space on mobile
This commit adds a custom css variable (--vh) which updates every resize
and is equal to 1% of the real visible space
It also adds a h-fix css class with height set to the real visible space

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.h-fix {
+    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100);
+}
